PlayerWidget: Layout shift fixed during media state transition

--- a/Upnp.Control.Web/ClientApp/src/styles/_player.scss
+++ b/Upnp.Control.Web/ClientApp/src/styles/_player.scss
@@ -23,13 +23,13 @@
         }
     }
 
-    .progress {
+    .pl-progress {
         grid-area: prog;
         justify-self: stretch;
         margin: map-get($spacers, 1) map-get($spacers, 2);
     }
 
-    .title {
+    .pl-title {
         grid-area: title;
         justify-self: stretch;
         display: flex;
@@ -43,24 +43,24 @@
         }
     }
 
-    .prev-btn {
+    .pl-prev-btn {
         grid-area: prev;
     }
 
-    .next-btn {
+    .pl-next-btn {
         grid-area: next;
     }
 
-    .play-btn {
+    .pl-main-btn {
         grid-area: play;
         font-size: 2.5rem;
     }
 
-    .volume-btn {
+    .pl-volume-btn {
         grid-area: vol;
     }
 
-    .mode-btn {
+    .pl-mode-btn {
         grid-area: mode;
     }
 
@@ -73,7 +73,7 @@
             max-height: 100%;
         }
 
-        .play-btn {
+        .pl-main-btn {
             font-size: 2rem;
         }
     }
@@ -89,11 +89,11 @@
             margin-inline: map-get($spacers, 1);
         }
 
-        .title {
+        .pl-title {
             align-items: start;
         }
 
-        .play-btn {
+        .pl-main-btn {
             font-size: 2rem;
         }
     }
